# qtquick3d-opencv-helpers

./: .gitignore  README.md  main.py  main.qml  pyproject.toml
examples/aruco/: main.py  main.qml
examples/frustum/: main.py  main.qml
src/qtquick3d_opencv_helpers/: __init__.py  frustum_geometry.py  grid_geometry.py  marker_classes.py
src/qtquick3d_opencv_helpers/qml/CvHelpers/: ArucoMarker.qml  AxisArrow.qml  CameraFrustum.qml  Frustum.qml  Grid.qml  qmldir
