[project]
name = "qtquick3d-opencv-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pyside6>=6.9.2",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools]
include_package_data = true

[tool.setuptools.package-data]
"qtquick3d_opencv_helpers": ["qml/CvHelpers/*", "qml/CvHelpers/qmldir"]
